--- a/README
+++ b/README
@@ -1,17 +1,33 @@
-/*
- * ============================================================================
- * Name        : GarlandHTTPFramework
- * Author      : MarMarAba
- * Version     : 0.5
- * Copyright   : Copyright (c) 2014 MarMarAba
- * Description : Simple free and open source web application mini REST
- *               framework based on Bogart, inspired by Sinatra, and written
- *               in C++.
- * ============================================================================
- */
+ Name        : GarlandHTTPFramework
+ Author      : MarMarAba
+ Version     : 0.5
+ Copyright   : Copyright (c) 2014 MarMarAba
+ Description : Simple free and open source web application mini REST
+               framework based on Bogart, inspired by Sinatra, and written
+               in C++.
+ 
+This is a Sinatra (http://www.sinatrarb.com/intro.html) inspired framework.
 
- 
- The path matching is this way:
- 
- 
- Only the first match will be processed, in insertion order. 
+The work is bassed on the Bogart C framework.
+
+The kernel works with the same main idea, but it is meant to be a
+C++ simple to use and implent framework.
+
+In the MainSample.cpp file you can find a quick sample of its functinality.
+
+To complie simply use:
+
+  make
+  
+To clean project:
+
+  make clean
+
+This project uses Libevent library for its core functinality. In my case
+works perfectly fine with 2.0.5 version. It is needed to install it before
+linking. In Debian based systems it will be made with:
+
+  sudo aptitude install libevent-dev
+
+If you have questions, ideas or interesting patches contact me in
+info [at] marmaraba [dot] com
